# windows_kernel_shadow_stack

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  clean.bat
src/: client.c  driver.c
src/client/: utils.c  utils.h
src/common/: utils.h
src/driver/: ioctl.c  ioctl.h  utils.asm  utils.c  utils.h
